2013-12-05  Martin Jambor  <mjambor@suse.cz>

	PR ipa/58253
	* ipa-prop.c (ipa_modify_formal_parameters): Create decls of
	non-BLKmode in their naturally aligned type.

2013-12-05  Marek Polacek  <polacek@redhat.com>

	PR sanitizer/59333
	PR sanitizer/59397
	* ubsan.c: Include rtl.h and expr.h.
	(ubsan_encode_value): Add new parameter.  If expanding, assign
	a stack slot for DECL_RTL of the temporary and call expand_assignment.
	Handle BOOLEAN_TYPE and ENUMERAL_TYPE.
	(ubsan_build_overflow_builtin): Adjust ubsan_encode_value call.
	* ubsan.h (ubsan_encode_value): Adjust declaration.
	* internal-fn.c (ubsan_expand_si_overflow_addsub_check): Move
	ubsan_build_overflow_builtin above expand_normal call.  Surround this call
	with push_temp_slots and pop_temp_slots.
	(ubsan_expand_si_overflow_neg_check): Likewise.
	(ubsan_expand_si_overflow_mul_check): Likewise.

2013-12-05  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gimple-ssa-strength-reduction.c (find_basis_for_candidate): Guard
	the get_alternative_base call with flag_expensive_optimizations.
	(alloc_cand_and_find_basis): Likewise.

2013-12-05  Tejas Belagod  <tejas.belagod@arm.com>

	* rtlanal.c (set_noop_p): Return nonzero in case of redundant vec_select
	for overlapping register lanes.

2013-12-05  Kirill Yukhin  <kirill.yukhin@intel.com>

	* config/i386/i386.c (ix86_expand_builtin): Generate
	reg for readflags built-in when optimizing.
	* config/i386/i386.md (*pushfl<mode>): Rename to ...
	(pushfl<mode>2): This. Fix iterator.
	(*popfl<mode>): Rename to ...
	(*popfl<mode>1): This. Fix iterator.

2013-12-05  Kirill Yukhin  <kirill.yukhin@intel.com>

        * config/i386/i386.c (IX86_BUILTIN_READ_FLAGS): New.
	(IX86_BUILTIN_WRITE_FLAGS): Ditto.
	(ix86_init_mmx_sse_builtins): Define
	__builtin_ia32_writeeflags_u32, __builtin_ia32_writeeflags_u64,
	__builtin_ia32_readeflags_u32, __builtin_ia32_readeflags_u64.
	(ix86_expand_builtin): Expand them.
	* config/i386/ia32intrin.h (__readeflags): New.
	(__writeeflags): Ditto.